--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,21 @@ nav span {
   font-size: 1.05rem;
 }
 
+.background {
+  background-image: url("/src/assets/herobg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.primary {
+  background-color: rgba(5, 8, 22, 0.5);
+}
+
+.secondary {
+  background-color: #aaa6c3;
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
