--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,15 @@ nav span {
 }
 
 .hash-span {
-  margin-top: -100px;
-  padding-bottom: 100px;
-  display: block;
+  margin-top: -5rem;
+  padding-bottom: 5rem;
+}
+
+@media (max-width: 640px) {
+  .hash-span {
+    margin-top: -2rem;
+    padding-bottom: 2rem;
+  }
 }
 
 .black-gradient {
